@@ -8,7 +8,7 @@
 }
 
 @ARTICLE{article-full,
-   author = {L[eslie] A. Aamport},
+   author = {L[eslie] A.~Aamport},
    title = {The Gnats and Gnus Document Preparation System},
    journal = {\mbox{G-Animal's} Journal},
    year = 1986,
@@ -18,6 +18,7 @@
    month = jul,
    keywords = "keyword1,keyword2,keyword3",
    note = "This is a full ARTICLE entry",
+   url = "\url{http://example.com/~user/}"
 }
 
 %The KEY field is here to override the KEY field in the journal being
