@@ -4,3 +4,6 @@ Custom Fields=alttitle,imdb
 [GCstar Video]
 CollectionType=3
 Plugin=Amazon (US)
+
+[ExportOptions - Bibtex]
+URL Package=true
