@@ -1,3 +1,7 @@
+2010-12-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Updated Bibtex handler to translate ~ to non-breaking space.
+
 2010-12-08  Robby Stephenson  <robby@periapsis.org>
 
 	* Updated Allocine script to version 0.7.3 (Bug 258281).
